--- a/job_skill_extraction_prototype_and_analysis.ipynb
+++ b/job_skill_extraction_prototype_and_analysis.ipynb
@@ -1176,7 +1176,7 @@
     "    lemmed = [lemmatizer.lemmatize(word) for word in text]\n",
     "    return lemmed\n",
     "\n",
-    "df_desc['clean_lemmed'] = df_desc.clean_words.apply(lemming)"
+    "# df_desc['clean_lemmed'] = df_desc.clean_words.apply(lemming)"
    ]
   },
   {
